extract inline `onclick` handler for CSP
move scripts to `body_tag` as `after_header` does not allow scripts by
design

--- a/common/after_header.html
+++ b/common/after_header.html
@@ -4,47 +4,47 @@
 
 	<!--ADD A "CLOSE BANNER" BUTTON ON THE TOP RIGHT-->
 	<!--To disable this button, comment the <button> </button> tag-->
-	
-	<button type="button" class="close" onclick='$(this).parent().remove();'>
+
+	<button type="button" class="close">
              <i class="fa fa-times d-icon d-icon-times" title="Close."></i>
         </button>
 
 
         <div class="container">
-	
+
             <!--SECTION HEADER-->
 	        <div class="section-header ">
-		
+
 		        <!--TITLE-->
 		        <h2 class="x-title"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
 
 		            <div class="colored-line"></div>
 
 		            <div class="description"><p>
-		            Nulla ullamcorper augue vel sodales pellentesque. 
-		            Sed vitae sapien sit amet mauris consequat malesuada. Vestibulum vitae iaculis nisl, vel aliquet velit. 
+		            Nulla ullamcorper augue vel sodales pellentesque.
+		            Sed vitae sapien sit amet mauris consequat malesuada. Vestibulum vitae iaculis nisl, vel aliquet velit.
 		            Fusce venenatis laoreet diam, non dictum nisl vestibulum non.</p>
 		            </div>
 		            <div class="colored-line"></div>
 	        </div>
 	        <!--/END SECTION HEADER-->
-	
+
 	            <div class="row">
-		
+
 
                     <!--SINGLE BOX-->
 		            <div class="col3 single-box">
-			
+
 			            <!--ICON-->
 			            <div class="x-icon"><i class="fa fa-cloud"></i></div>
-			
+
 			            <!--HEADING-->
 			            <h3>A simple box</h3>
-			
+
 			            <!--BOX DESCRIPTION-->
-			            <p class="box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+			            <p class="box">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 			            Sed id congue eros, sit amet suscipit libero. Nunc vitae placerat est. </p>
-			
+
                 	    <!--LIST-->
 			            <div>
             		        <ul class="feature-list">
@@ -55,57 +55,57 @@
             			        <li><i class="fa fa-subway"></i> Go to work</a> avoiding traffic</li>
             		        </ul>
                         </div>
-			
+
                     </div>
 		            <!--/END SINGLE BOX-->
-		
+
 
                     <!--SINGLE BOX-->
 		            <div class="col3 single-box">
-			
+
 			            <!--ICON-->
 			            <div class="x-icon"><i class="fa fa-rocket"></i></div>
-			
+
 			            <!--HEADING-->
 			            <h3>Another simple box</h3>
-			
+
 			            <!--BOX DESCRIPTION-->
-			            <p class="box">Integer velit ante, <a href="www.discourse.org">DISCOURSE</a> amet tristique in, gravida at ligula. 
-			            Sed gravida mauris id neque vestibulum semper. Suspendisse potenti. Nam nec maximus ligula. 
+			            <p class="box">Integer velit ante, <a href="www.discourse.org">DISCOURSE</a> amet tristique in, gravida at ligula.
+			            Sed gravida mauris id neque vestibulum semper. Suspendisse potenti. Nam nec maximus ligula.
 			            Ut eget semper est. Sed ornare sit amet justo eu rutrum. Integer sit amet facilisis ipsum. </p>
 
                		    <!--BUTTON-->
                		    <div class="buttons" id="my-button">
                   	    <a href="enter-a-url" class="btn btn-icon-text ember-view"><i class="fa fa-user-plus d-icon d-icon-user-plus"></i>My new button</a>
-                        </div>			
-			
+                        </div>
+
 		            </div>
 		            <!--/END SINGLE BOX-->
-		
 
- 
+
+
                     <!--SINGLE BOX-->
 		            <div class="col3 single-box">
-			
+
 			            <!--ICON-->
 			            <div class="x-icon"><i class="fa fa-cog"></i></div>
-			
+
 			            <!--HEADING-->
 			            <h3>Yet another simple box</h3>
-			
+
 			            <!--BOX DESCRIPTION-->
-			            <p class="box">Pellentesque ut lacinia nunc, eu molestie nulla. 
-			            Pellentesque viverra nisi urna, at hendrerit nisl sodales in. 
-			            Morbi auctor sodales nisi, eget aliquam justo maximus in. 
-			            Suspendisse a felis a massa elementum pellentesque quis eget dolor. 
+			            <p class="box">Pellentesque ut lacinia nunc, eu molestie nulla.
+			            Pellentesque viverra nisi urna, at hendrerit nisl sodales in.
+			            Morbi auctor sodales nisi, eget aliquam justo maximus in.
+			            Suspendisse a felis a massa elementum pellentesque quis eget dolor.
 			            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-			
+
 		            </div>
 		            <!--/END SINGLE BOX-->
 
 	            </div>
 	            <!--/END ROW-->
-  
+
         </div>
         <!--/END CONTAINER-->
 
