Update to Fontawesome 5

--- a/common/after_header.html
+++ b/common/after_header.html
@@ -6,9 +6,8 @@
 	<!--To disable this button, comment the <button> </button> tag-->
 	
 	<button type="button" class="close" onclick='$(this).parent().remove();'>
-             <i class="fa fa-times d-icon d-icon-times" title="Close."></i>
+             <svg class="fa d-icon d-icon-times svg-icon svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#times"></use></svg>
         </button>
-
 
         <div class="container">
 	
@@ -36,7 +35,7 @@
 		            <div class="col3 single-box">
 			
 			            <!--ICON-->
-			            <div class="x-icon"><i class="fa fa-cloud"></i></div>
+			            <div class="x-icon"><svg class="fa d-icon d-icon-cog svg-icon svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#cog"></use></svg></div>
 			
 			            <!--HEADING-->
 			            <h3>A simple box</h3>
@@ -48,11 +47,10 @@
                 	    <!--LIST-->
 			            <div>
             		        <ul class="feature-list">
-            			        <li><i class="fa fa-coffee"></i><a href="your-url"> Coffee and milk</a> to wake up in the morning</li>
-            			        <li><i class="fa fa-heartbeat"></i> One hour of gym</li>
-            			        <li><i class="fa fa-book"></i> Rearrange books in the study</li>
-            			        <li><i class="fa fa-telegram"></i> Telegram</a></li>
-            			        <li><i class="fa fa-subway"></i> Go to work</a> avoiding traffic</li>
+            			        <li><svg class="fa d-icon d-icon-twitter svg-icon svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#twitter"></use></svg><a href="your-url"> A tweet</a> to wake up my friends</li>
+            			        <li><svg class="fa d-icon d-icon-picture-o svg-icon svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#far-image"></use></svg> Put the photos in the bag</li>
+            			        <li><svg class="fa d-icon d-icon-list svg-icon svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#list"></use></svg> Rearrange books in the study</li>
+            			        <li><svg class="fa d-icon d-icon-thumbtack svg-icon pinned svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#thumbtack"></use></svg> And the notes?</a></li>
             		        </ul>
                         </div>
 			
@@ -64,7 +62,7 @@
 		            <div class="col3 single-box">
 			
 			            <!--ICON-->
-			            <div class="x-icon"><i class="fa fa-rocket"></i></div>
+			            <div class="x-icon"><svg class="fa d-icon d-icon-search svg-icon svg-node" aria-hidden="true"><use xlink:href="#search"></use></svg></div>
 			
 			            <!--HEADING-->
 			            <h3>Another simple box</h3>
@@ -76,7 +74,7 @@
 
                		    <!--BUTTON-->
                		    <div class="buttons" id="my-button">
-                  	    <a href="enter-a-url" class="btn btn-icon-text ember-view"><i class="fa fa-user-plus d-icon d-icon-user-plus"></i>My new button</a>
+                  	    <a href="enter-a-url" class="btn btn-icon-text ember-view"><svg class="fa d-icon d-icon-user-plus svg-icon svg-node" aria-hidden="true"><use xlink:href="#user-plus"></use></svg> My new button</a>
                         </div>			
 			
 		            </div>
@@ -88,7 +86,7 @@
 		            <div class="col3 single-box">
 			
 			            <!--ICON-->
-			            <div class="x-icon"><i class="fa fa-cog"></i></div>
+			            <div class="x-icon"><svg class="fa d-icon d-icon-wrench svg-icon svg-node" aria-hidden="true"><use xlink:href="#wrench"></use></svg></div>
 			
 			            <!--HEADING-->
 			            <h3>Yet another simple box</h3>
