--- a/common/after_header.html
+++ b/common/after_header.html
@@ -47,7 +47,7 @@
                 	    <!--LIST-->
 			            <div>
             		        <ul class="feature-list">
-            			        <li><svg class="fa d-icon d-icon-twitter svg-icon svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#twitter"></use></svg><a href="your-url"> A tweet</a> to wake up my friends</li>
+            			        <li><svg class="fa d-icon d-icon-twitter svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-twitter"></use></svg><a href="your-url"> A tweet</a> to wake up my friends</li>
             			        <li><svg class="fa d-icon d-icon-picture-o svg-icon svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#far-image"></use></svg> Put the photos in the bag</li>
             			        <li><svg class="fa d-icon d-icon-list svg-icon svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#list"></use></svg> Rearrange books in the study</li>
             			        <li><svg class="fa d-icon d-icon-thumbtack svg-icon pinned svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#thumbtack"></use></svg> And the notes?</a></li>
