--- a/common/after_header.html
+++ b/common/after_header.html
@@ -5,7 +5,7 @@
 	<!--ADD A "CLOSE BANNER" BUTTON ON THE TOP RIGHT-->
 	<!--To disable this button, comment the <button> </button> tag-->
 	
-	<button type="button" class="close" onclick='$(this).parent().remove();'>
+	<button type="button" class="close">
              <svg class="fa d-icon d-icon-times svg-icon svg-string" xmlns="http://www.w3.org/2000/svg"><use xlink:href="#times"></use></svg>
         </button>
 
